src/objects/Robot_Topic__mdt.object
<CustomObject>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>This will be used to match the action with an specific object in the org</description>
        <label>Object_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Message</fullName>
                    <default>true</default>
                    <label>Message</label>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Robot Topic</label>
    <pluralLabel>RobotTopics</pluralLabel>
</CustomObject>